@@ -1,13 +1,13 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/gensink/gensink-4.1.ebuild,v 1.4 2004/07/10 12:22:54 eldad Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/gensink/gensink-4.1.ebuild,v 1.5 2005/09/15 21:47:34 agriffis Exp $
 
 DESCRIPTION="Gensink ${PV}, a simple TCP benchmark suite."
 HOMEPAGE="http://jes.home.cern.ch/jes/gensink/"
 SRC_URI="http://jes.home.cern.ch/jes/gensink/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="x86 ~sparc ~ppc ~alpha"
+KEYWORDS="alpha ~ppc ~sparc x86"
 IUSE=""
 DEPEND=""
 
