@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/gensink
-# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/gensink/ChangeLog,v 1.4 2004/07/10 12:22:54 eldad Exp $
+# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/gensink/ChangeLog,v 1.5 2005/09/15 21:47:34 agriffis Exp $
+
+  15 Sep 2005; Aron Griffis <agriffis@gentoo.org> gensink-4.1.ebuild:
+  Mark 4.1 stable on alpha
 
   10 Jul 2004; Eldad Zack <eldad@gentoo.org> +metadata.xml,
   gensink-4.1.ebuild:
